# Metaversitas-2.0

./: .gitattributes.swp  .gitignore
Web/backend/: .dockerignore  .env  Cargo.toml  Dockerfile  Makefile  Metaversitas API Collections.postman_collection.json  bacon.toml  docker-compose.yaml
Web/backend/.sqlx/: query-0242bd0f22684f3e49f04ef8caa77762e9d0cee9388d711190138bd5a18f6b01.json  query-04335f8be797ceb90add137489ef5e48279b1681b1cbcd5d6152a5b11cbbd28a.json  query-082172ebcd91aae7bce69f0435a576689f6edea23d8c1a1e6c63cab33658645c.json  query-0f30a69ee4c9b317b0e775671b49ab8b381f8e98d235f70c9eb759b25bef9cd6.json  query-108e8aeeaff18403b09acd6a3696f0ddf0a4a6f6c30716e4f3358e3b8676e6a6.json  query-12a8fcfe30b4daab3299f578019bd7dce35fb5099e143504f898f8aacc2c8fb7.json  query-178e0f2ca13c2f64b31f3f4605b5744232ae9b2939277e699e17c74116dc0cc0.json  query-18b803896eb1c49fa7cf3087ab904c089cd584b7d8fdb5f816324d37a62a5cf5.json  query-18e45e405bbdace852da3ba67481119b0e95d23e92839632159ca95ad8655d62.json  query-19e39eb58693168983a71c9da0024dfa5ffca32f716f06628b1174a3cbf3d711.json  query-1a3eb86b4f2e82d553635466de04388b42ccaf1d2d306fc12a3a1ac87331835d.json  query-1a6d1f63f7a4c64b774b0e7184c71750455ff0ded25722c0744888dcabf05bff.json  query-1bfdd32088ef47f8f421330b08d959b547d62ba8cb40e72ad22b81f12f362d8f.json  query-1cac210b25f947e35beab5b3c26bb1410cc73b335817feed9154502f23f2feab.json  query-1ec099b52a424c616c3022c9c9c15bb70512cababea0c6fc74a84ee2ef579666.json  query-1f75f241c156036ac9464d537939cd660ce8ab02ba9cef02bb25139c707668fb.json  query-2469bcda3c83547aaee944b98951d8a1e6d62634ee0a663039c79c42706c1052.json  query-267713e6f7e070750eef6a7e96cbd965fdd6791d2bdd55be517cf9ab712db26b.json  query-273e289526abe00cf58fa1da8d1f3ca898dafb9e2e15898689b81e12eb6070e7.json  query-29fd2c506fb8919da01a6b7d1e079e465af1ec6f625d235636b8b51d69ecb98a.json  query-2ce5785ccd1afac46d509673210517f7b43be78cf5ce31778df604a04f64765e.json  query-2dd1648bd590c19fb8481a308e5d6970eea15bc3a06bab63053070764a36904c.json  query-2fc11d3440281beef19653a81934df28f8c832a25497e6c8ff2e05e69b2693ab.json  query-31d03305c357b4e555417f91e6f8ed85d2cf709aaf6798685526cd2f4de0c909.json  query-33160288973d70fb3dcca36f77e9534882465174c1d2710b852c18c70832c83f.json  query-3624d39236df1359d2bce5fe76740715b54b52961d55f7a2b432b606fdaa2a7d.json  query-3761550fab9061b677752afbae7a2a9d053d73287d5cd61e3b9f29de1e0b7a03.json  query-391b539af24dd54671c9012ea85bfc845a0f852e51b6fc9548d5457bc222e6b1.json  query-450f21becd77bdbb1a9c5599a0f764e6ac2d665c1e381ae274b58c9d0a28973d.json  query-4bc3e9c17534523eccd685ed03167e958dc113b94760806e05ba4daf35913f2d.json  query-4e575e8d076249a444716b9033ad9dec7c08f5c97d3f55cff352059a1cf8addc.json  query-516531cf6bb73d5ae595292eab07172b402cf60f667e62079570fccbb6326f3e.json  query-52df4513a8c705dcc82dab4c8a37fdd5c0f07146e625d03c9c5d87d7b2cba363.json  (+47 more)
Web/backend/certs/: certificate.pem  (+1 more)
(+1783 files in other folders)
