[package]
name = "metaversitas"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros", "http2"] }
serde = "1.0.190"
tokio = { version = "1.32.0", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "tls-rustls", "uuid", "chrono", "bigdecimal" ] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
serde_json = "1.0.108"
dotenvy = "0.15.7"
tower-http = { version = "0.4.4", features = ["cors", "trace"] }
thiserror = "1.0.48"
hyper = { version = "0.14.27", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
chrono = { version = "0.4.29", features = ["serde"] }
argon2 = "0.5.2"
anyhow = "1.0.75"
rand = "0.8.5"
uuid = { version = "1.4.1", features = ["v4"] }
axum-extra = { version = "0.8.0", features = ["cookie"] }
time = "0.3.28"
redis = { version = "0.23.3", features = ["tokio-comp", "json"] }
redis-macros = "0.2.1"
jsonwebtoken = "8.3.0"
regex = "1.9.5"
parking_lot = "0.12.1"
once_cell = "1.18.0"
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
garde = { version = "0.15.0", features = ["email"] }
