[package]
name = "metaversitas"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros", "http2", "multipart"] }
serde = "1.0.192"
tokio = { version = "1.34.0", features = ["full"] }
sqlx = { version = "0.7.2", features = [ "runtime-tokio", "postgres", "tls-rustls", "uuid", "chrono", "bigdecimal" ] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde_json = "1.0.108"
dotenvy = "0.15.7"
tower-http = { version = "0.4.4", features = ["cors", "trace"] }
thiserror = "1.0.50"
hyper = { version = "0.14.27", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
chrono = { version = "0.4.31", features = ["serde"] }
argon2 = "0.5.2"
anyhow = "1.0.75"
rand = "0.8.5"
uuid = { version = "1.5.0", features = ["v4"] }
axum-extra = { version = "0.8.0", features = ["cookie"] }
time = "0.3.30"
redis = { version = "0.23.3", features = ["tokio-comp", "json", "connection-manager"] }
redis-macros = "0.2.1"
jsonwebtoken = "9.1.0"
regex = "1.10.2"
parking_lot = "0.12.1"
once_cell = "1.18.0"
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
garde = { version = "0.16.2", features = ["email"] }
rust-s3 = { version = "0.33.0", features = ["tokio-rustls-tls"] }
byte-unit = "4.0.19"
openssl = { version = "0.10.59", features = ["vendored"] }
